Fixed missing linebreak on lists of ip addresses

--- a/templates/Sparkle/assets/css/main.css
+++ b/templates/Sparkle/assets/css/main.css
@@ -523,6 +523,11 @@ table td {
     min-height: 25px;
 }
 
+table label {
+	display: block;
+	clear: both;
+}
+
 table th.right, table td.right {
 	text-align: right;
 }
